/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "GreenEnergyHub.PostOffice.Communicator.Contracts";

message RequestBundleResponse {

  oneof Reply {
    FileResource Success = 1;
    RequestFailure Failure = 2;
  }

  /**
   * Identifies a file resource and the individual dataset included with the file
   */
  message FileResource {
    repeated string UUID = 1; // All the datasets in the reply.
    string uri = 2; // URI pointing to where the file can be retrieved
  }

  /**
   * A reply on a failed request
   */
  message RequestFailure {
    repeated string UUID = 1; // Dataset identifications that were requested
    Reason reason = 2; // Failure reason
    string failureDescription = 3; // Description of the failure

    /**
     * Failure reasons
     */
    enum Reason {
      DatasetNotFound = 0; // Dataset was not found
      DatasetNotAvailable = 1; // Data found, but not ready yet - try again later
      InternalError = 15; // Something bad happened on our end - nothing the caller can do about this
    }
  }
}